--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>GoldySucks.xyz</h1>
         <h2>Exposing the Truth About iGoldy</h2>
     </header>
-    <img src="goldy-image.jpg" alt="iGoldy with cheese and chips">
+    <img src="goldy-image.png" alt="iGoldy with cheese and chips">
     <p>iGoldy, a streamer known for breaking Kick community guidelines, has gained notoriety as a prolific scammer. His streams often feature unconsented engagements with underage children, raising serious concerns. Reports suggest he makes sexually suggestive comments to these vulnerable individuals, potentially indicating predatory behavior. This site aims to raise awareness about his actions.</p>
 </body>
 </html>
