--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             margin: 10px 0;
             border-radius: 5px;
         }
+        img {
+            display: block;
+            max-width: 100%;
+            height: auto;
+            margin: 20px auto;
+            border-radius: 5px;
+        }
         footer {
             text-align: center;
             margin-top: 20px;
@@ -92,6 +99,9 @@
             }
             header h2 {
                 font-size: 1.2em;
+            }
+            img {
+                margin: 15px auto;
             }
         }
     </style>
