--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h1>GoldySucks.xyz</h1>
         <h2>Exposing iGoldy’s Violations and Kick’s Inaction</h2>
     </header>
-    <img src="goldy-image.png" alt="iGoldy with cheese and chips">
+    <img src="goldy-image.png" height="30%" width="30%" alt="iGoldy with cheese and chips">
     <div class="container">
         <div class="intro">
             <p>The streamer t5goldy has repeatedly violated Kick’s Community Guidelines through inappropriate interactions with minors, yet Kick has failed to take meaningful action beyond removing reported videos. Despite multiple anonymous reports, t5goldy continues to stream, endangering vulnerable individuals. This site documents two confirmed incidents with clipped video evidence (faces blurred to protect minors’ identities) to highlight these violations and Kick’s inadequate moderation. Archived evidence is available for legitimate investigations; contact us at [insert placeholder email or contact form link].</p>
